feat: seeder / AES criptography / excuting seed

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
     "start": "node -r dotenv/config ./src/server.js",
     "dev": "node --watch -r dotenv/config ./src/server.js",
     "createdb": "npx sequelize-cli db:create",
-    "migratedb": "npx sequelize-cli db:migrate"
+    "migratedb": "npx sequelize-cli db:migrate",
+    "seeddb": "npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aes-js": "^3.1.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
